feat: Update login to integrate with Supabase

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,32 +1,49 @@
-<ion-header [translucent]="true">
-</ion-header>
+<ion-header [translucent]="true"> </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-  </ion-header>
+  <ion-header collapse="condense"> </ion-header>
 
-  <div style="z-index: 1000; position: fixed;"  >
-    <img src="assets/GooList-.png" alt="GooList">
+  <div style="z-index: 1000; position: fixed">
+    <img src="assets/GooList-.png" alt="GooList" />
   </div>
-  
+
   <div class="content-container">
-    <h1> Inicia sesión </h1>
-    <div class="input-container">
-      <ion-item>
-        <ion-input fill= "outline" placeholder="Correo" type="email"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-input fill= "outline" placeholder="Contraseña" type="password" ></ion-input>
-      </ion-item>
-    </div>
+    <h1>Inicia sesión</h1>
+    <form [formGroup]="loginForm" (ngSubmit)="onLoginButton()">
+      <div class="input-container">
+        <ion-list>
+          <ion-input
+            type="email"
+            fill="outline"
+            label="Email"
+            labelPlacement="floating"
+            formControlName="email"
+            [errorText]="loginForm.controls['email'].errors?.['required'] ? 'Email requerido' : 'Email inválido'"
+          ></ion-input>
+          <br />
+          <ion-input
+            type="password"
+            fill="outline"
+            label="Contraseña"
+            labelPlacement="floating"
+            formControlName="password"
+            [errorText]="loginForm.controls['password'].errors ? 'Contraseña inválida' : ''"
+          ></ion-input>
+          <ion-button expand="block" type="submit" (ngSubmit)="onLoginButton()"
+        >Continuar</ion-button>
+        </ion-list>
+      </div>
+    </form>
 
     <div class="button-container">
-      <ion-button expand="block" (click)="onLoginButton()">Continuar</ion-button>
-      <hr>
+      
+      <hr/>
       <ion-button expand="block" color="tertiary">Iniciar sesion con Google</ion-button>
-      <p style="text-align: center;"> o </p>
-      <p class="texto">¿No tiene cuenta? <span class="texto color-registro" (click)="onRegisterButtonPressed()">Crea una</span> </p> 
+      <p style="text-align: center">o</p>
+      <p class="texto">
+        ¿No tiene cuenta?
+        <span class="texto color-registro" (click)="onRegisterButtonPressed()">Crea una</span>
+      </p>
     </div>
-
   </div>
 </ion-content>
