--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -7,17 +7,20 @@
 <ion-content class="ion-padding" [fullscreen]="true">
   <hr>
   <div class="container">
-    <div style="flex-basis: 10%;">
-      <ion-avatar><img alt="Silueta de persona"
-          src="https://ionicframework.com/docs/img/demos/avatar.svg" /></ion-avatar>
+    <div style="flex-basis: 10%; text-align: center;">
+      <ion-avatar>
+        <img [src]="profileImageUrl || 'https://ionicframework.com/docs/img/demos/avatar.svg'" alt="Foto de perfil" />
+      </ion-avatar>
+      <ion-button fill="outline" size="small" color="primary" (click)="onFileInputClick()">Cambiar Foto</ion-button>
+      <input type="file" hidden #fileInput (change)="onImageSelected($event)" accept="image/*" />
       <div (click)="performLogout()">
-        <p style="color: red;font-size: 12px;"> Cerrar Sesion </p>
+        <p style="color: red; font-size: 12px;">Cerrar Sesión</p>
       </div>
     </div>
 
     <div style="flex-basis: 70%;">
-      <ion-item> Usuario {{ username }} </ion-item> 
-      <ion-item> Email {{ email }}</ion-item>
+      <ion-item>Usuario: {{ username }}</ion-item>
+      <ion-item>Email: {{ email }}</ion-item>
     </div>
   </div>
 
@@ -25,16 +28,14 @@
 
   <div>
     <ion-item class="alarma">
-      <ion-range label="Tareas diarias" aria-label="Custom range" [min]="1" [max]="5" [value]="3" [pin]="true"
-        [ticks]="true" [snaps]="true"></ion-range>
+      <ion-range label="Tareas diarias" aria-label="Custom range" [min]="1" [max]="5" [value]="3" [pin]="true" [ticks]="true" [snaps]="true"></ion-range>
     </ion-item>
-    <p class="info"> El máximo de tareas diarias que se muestran en pantalla es 5</p>
+    <p class="info">El máximo de tareas diarias que se muestran en pantalla es 5</p>
   </div>
 
   <div class="container">
-    <p style="color: #9DB2CE;"> Guardar cambios </p>
+    <p style="color: #9DB2CE;">Guardar cambios</p>
   </div>
 
-  <ion-button expand="block" color="danger" >Eliminar Cuenta</ion-button>
-
+  <ion-button expand="block" color="danger">Eliminar Cuenta</ion-button>
 </ion-content>
