Profile image and Data persistent

--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -19,7 +19,7 @@
     </div>
 
     <div style="flex-basis: 70%;">
-      <ion-item>Usuario: {{ username }}</ion-item>
+      <ion-item>Usuario: {{ nombreusuario }}</ion-item>
       <ion-item>Email: {{ email }}</ion-item>
     </div>
   </div>
