--- a/src/app/pages/new-task/new-task.page.html
+++ b/src/app/pages/new-task/new-task.page.html
@@ -1,6 +1,4 @@
-<ion-header [translucent]="true">
-  <app-header backButton="true"></app-header>
-</ion-header>
+<app-header title="Agregar nueva tarea" class="ion-text-center" backButton="true"></app-header>
 
 <ion-content class="ion-padding">
   <form [formGroup]="noteForm">
