--- a/src/app/pages/tasks/tasks.page.html
+++ b/src/app/pages/tasks/tasks.page.html
@@ -1,8 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Filtrar Tareas</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="Tareas" color="light" class="ion-text-center"></app-header>
 
 <ion-content class="ion-padding" [fullscreen]="true">
   <!-- Botones para filtrar las tareas -->
