--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title> Home </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="Home" color="light" class="ion-text-center"></app-header>
 
 <ion-content class="ion-padding">
   <div> Bienvenido Usuario,
