--- a/src/app/pages/tags/tags.page.html
+++ b/src/app/pages/tags/tags.page.html
@@ -1,13 +1,13 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>tags</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header color="light" title="Etiquetas" class="ion-text-center"></app-header>
+
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">tags</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list>
+    <ion-item *ngFor="let tag of tags">
+      <ion-label>{{ tag }}</ion-label>
+      <ion-button slot="end" fill="clear" (click)="editTag(tag)">
+        <ion-icon name="create-outline"></ion-icon>
+      </ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
