--- a/src/app/pages/tasks/tasks.page.scss
+++ b/src/app/pages/tasks/tasks.page.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
+    margin-top: 25px;
   
     ion-button {
       --background: #f4f5f8;
@@ -22,6 +23,7 @@
 .agregar-tarea {
     text-align: center;
     margin-bottom: 20px;
+    margin-top: 35px;
     color: #613EEA;
     font-weight: 500;
   }
