--- a/src/app/pages/tags/tags.page.html
+++ b/src/app/pages/tags/tags.page.html
@@ -3,9 +3,21 @@
 
 <ion-content [fullscreen]="true">
   <ion-list>
-    <ion-item *ngFor="let tag of tags">
-      <ion-label>{{ tag }}</ion-label>
-      <ion-button slot="end" fill="clear" (click)="editTag(tag)">
+    <ion-item> 
+      <ion-label>Casa</ion-label>
+      <ion-button slot="end" fill="clear" (click)="seleccionarEtiqueta('Casa')">
+        <ion-icon name="create-outline"></ion-icon>
+      </ion-button>
+    </ion-item>
+    <ion-item> 
+      <ion-label>Estudio</ion-label>
+      <ion-button slot="end" fill="clear" (click)="seleccionarEtiqueta('Estudio')">
+        <ion-icon name="create-outline"></ion-icon>
+      </ion-button>
+    </ion-item>
+    <ion-item> 
+      <ion-label>Ocio</ion-label>
+      <ion-button slot="end" fill="clear" (click)="seleccionarEtiqueta('Ocio')">
         <ion-icon name="create-outline"></ion-icon>
       </ion-button>
     </ion-item>
