--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -7,8 +7,9 @@ ion-title{
   font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 
-.progress-container {
+.date-container {
   background-color: #f4f4f4;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   border-radius: 20px;
   padding: 10px;
   margin-top: 20px;
@@ -16,22 +17,6 @@ ion-title{
   align-items: center;
 }
 
-.progress-container {
-  background-color: #f4f4f4;
-  border-radius: 25px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0 15px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.progress-text {
-  font-size: 18px;
-  font-weight: 500;
-  color: #333;
-}
 
 .green-background {
   position: fixed;
